fixed spelling errors, changed gorillaz game deployment link.

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             <h2 class="text-secondary text-uppercase mb-0">KXAN Article Scraper</h2>
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="img/portfolio/news.gif" alt="Breaking News GIF">
-            <p class="mb-5">This application scrapes current Ausin local news from KXAN and stores the articles in a
+            <p class="mb-5">This application scrapes current Austin local news from KXAN and stores the articles in a
               database. It stores the article, along with the article link and a short summary of the article, and
               allows the user to save, comment on or delete the current articles.</p>
             <a class="btn btn-primary btn-lg rounded-pill" href="https://austin-news-webscraper.herokuapp.com/" target="_blank">Open
@@ -365,7 +365,7 @@
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="img/portfolio/Gorillaz.gif" alt="2D from Gorillaz nodding GIF">
             <p class="mb-5">A simple, but addictive, Gorillaz centered memory game built using React.</p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="https://gorillaz-memory-game.herokuapp.com/" target="_blank">Open
+            <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/memoryGame/" target="_blank">Open
               Project</a>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
