--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Spotify Movie Playlist</h2>
+            <h2 class="text-secondary text-uppercase mb-0">Spotify - Movie Playlist</h2>
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="img/portfolio/Spotify-MP.gif" alt="Spotify Logo GIF">
             <p class="mb-5">Utilizes OMDb API to find soundtrack info from user submitted movie then creates a spotify
               playlist out of said tracklist. You MUST have a Spotify account to use this application.</p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="https://project-1-hackers.github.io/Project-1-BootCamp/?mode=select"
+            <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/Project-1-BootCamp/"
               target="_blank">Open Project</a>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
