--- a/index.html
+++ b/index.html
@@ -137,11 +137,21 @@
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/crystals.gif" alt="Crystal Floating in Hands GIF">
+            <img class="img-fluid" src="img/portfolio/burger.gif" alt="Burger animation GIF">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
           <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-8">
+            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                <i class="fa fa-search-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/crystals.gif" alt="Crystal Floating in Hands GIF">
+          </a>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-9">
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
                 <i class="fa fa-search-plus fa-3x"></i>
@@ -426,6 +436,29 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
+            <h2 class="text-secondary text-uppercase mb-0">Eat Muh Burger</h2>
+            <hr class="star-dark mb-5">
+            <img class="img-fluid mb-5" src="img/portfolio/burger.gif" alt="Burger animation GIF">
+            <p class="mb-5">A restaurant app that lets users input the names of burgers they'd like to eat. The input
+              will be stored in a JawDB/MySQL database. The user may then choose to eat the burger, which changes the
+              state of the burgers data to 'devoured'.</p>
+            <a class="btn btn-primary btn-lg rounded-pill" href="https://eat-muh-burger.herokuapp.com/" target="_blank">Open
+              Project</a>
+            <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+              <i class="fa fa-close"></i>
+              Close Project</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Portfolio Modal 8 -->
+  <div class="portfolio-modal mfp-hide" id="portfolio-modal-8">
+    <div class="portfolio-modal-dialog bg-white">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
             <h2 class="text-secondary text-uppercase mb-0">Crystals Collector</h2>
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="img/portfolio/crystals.gif" alt="Crystal Floating in Hands GIF">
@@ -442,8 +475,8 @@
     </div>
   </div>
 
-  <!-- Portfolio Modal 8 -->
-  <div class="portfolio-modal mfp-hide" id="portfolio-modal-8">
+  <!-- Portfolio Modal 9 -->
+  <div class="portfolio-modal mfp-hide" id="portfolio-modal-9">
     <div class="portfolio-modal-dialog bg-white">
       <div class="container text-center">
         <div class="row">
