updated portfolio to match career milestone feedback.

--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
   <footer class="footer text-center">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 mb-5 mb-lg-0">
+        <div class="col-md-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Location</h4>
           <p class="lead mb-0">305 E. Yager Ln
             <br>Austin, TX 78753</p>
         </div>
-        <div class="col-md-6 mb-5 mb-lg-0">
+        <div class="col-md-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Around the Web</h4>
           <ul class="list-inline mb-0">
             <li class="list-inline-item">
@@ -276,6 +276,14 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="col-md-4 mb-5 mb-lg-0">
+          <h4 class="text-uppercase mb-4">Contact Info</h4>
+          <p class="lead mb-0">Email:
+            <br>corey.waitforit.mitchell@gmail.com</p>
+          <br>
+          <p class="lead mb-0">Phone Number:
+            <br>(214) 448-5190</p>
         </div>
       </div>
     </div>
@@ -310,11 +318,14 @@
             <img class="img-fluid mb-5" src="img/portfolio/Spotify-MP.gif" alt="Spotify Logo GIF">
             <p class="mb-5">Utilizes OMDb API to find soundtrack info from user submitted movie then creates a spotify
               playlist out of said tracklist. You MUST have a Spotify account to use this application.</p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/Project-1-BootCamp/"
+            <p class="mb-5">Technologies Utilized: HTML, CSS w/ Bootstrap and JavaScript w/ jQuery</p>
+            <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/Spotify-Movie-Playlist/"
               target="_blank">Open Project</a>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
               Close Project</a>
+            <br>
+            <a href="https://github.com/PROJECT-1-HACKERS/Spotify-Movie-Playlist" target="_blank">Github Repo</a>
           </div>
         </div>
       </div>
@@ -331,11 +342,14 @@
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="img/portfolio/friends2.gif" alt="Mac and Cheese friends with benefits GIF">
             <p class="mb-5">Answer a short ten question survey and be matched up with a new friend!</p>
+            <p class="mb-5">Technologies Utilized: HTML, CSS w/ Bootstrap, JavaScript w/ jQuery, Node.js and Express.js</p>
             <a class="btn btn-primary btn-lg rounded-pill" href="https://friend-finder-supreme.herokuapp.com/" target="_blank">Open
               Project</a>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
               Close Project</a>
+            <br>
+            <a href="https://github.com/corey-mitchell/friendfinder" target="_blank">Github Repo</a>
           </div>
         </div>
       </div>
@@ -354,11 +368,15 @@
             <p class="mb-5">This application scrapes current Austin local news from KXAN and stores the articles in a
               database. It stores the article, along with the article link and a short summary of the article, and
               allows the user to save, comment on or delete the current articles.</p>
+            <p class="mb-5">Technologies Utilized: HTML, CSS w/ Bootstrap, JavaScript w/ jQuery, Node.js, Express.js,
+              MongoDB w/ Mongoose and Handlebars.js</p>
             <a class="btn btn-primary btn-lg rounded-pill" href="https://austin-news-webscraper.herokuapp.com/" target="_blank">Open
               Project</a>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
               Close Project</a>
+            <br>
+            <a href="https://github.com/corey-mitchell/webScraper" target="_blank">Github Repo</a>
           </div>
         </div>
       </div>
@@ -375,11 +393,14 @@
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="img/portfolio/Gorillaz.gif" alt="2D from Gorillaz nodding GIF">
             <p class="mb-5">A simple, but addictive, Gorillaz centered memory game built using React.</p>
+            <p class="mb-5">Technologies Utilized: HTML, CSS w/ Bootstrap, JavaScript, Node.js, Express.js and React.js</p>
             <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/memoryGame/" target="_blank">Open
               Project</a>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
               Close Project</a>
+            <br>
+            <a href="https://github.com/corey-mitchell/memoryGame" target="_blank">Github Repo</a>
           </div>
         </div>
       </div>
@@ -396,11 +417,14 @@
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="img/portfolio/Trivia.gif" alt="Anime Character Annoyed by Resposibilities GIF">
             <p class="mb-5">Test your anime knowledge with this Anime Trivia Game!</p>
+            <p class="mb-5">Technologies Utilized: HTML, CSS w/ Bootstrap and JavaScript w/ jQuery</p>
             <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/TriviaGame/" target="_blank">Open
               Project</a>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
               Close Project</a>
+            <br>
+            <a href="https://github.com/corey-mitchell/TriviaGame" target="_blank">Github Repo</a>
           </div>
         </div>
       </div>
@@ -419,11 +443,14 @@
             <p class="mb-5">This project is an anime GIF generator that utilizes Giphy's API. There is a list of animes
               that are pregenerated, but you may submit your own to see what comes up. Don't feel obligated to limit
               yourself to anime, play around and see what cool GIFs you can discover!</p>
+            <p class="mb-5">Technologies Utilized: HTML, CSS w/ Bootstrap and JavaScript w/ jQuery</p>
             <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/unit-6-assignment/"
               target="_blank">Open Project</a>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
               Close Project</a>
+            <br>
+            <a href="https://github.com/corey-mitchell/unit-6-assignment" target="_blank">Github Repo</a>
           </div>
         </div>
       </div>
@@ -442,11 +469,15 @@
             <p class="mb-5">A restaurant app that lets users input the names of burgers they'd like to eat. The input
               will be stored in a JawDB/MySQL database. The user may then choose to eat the burger, which changes the
               state of the burgers data to 'devoured'.</p>
+            <p class="mb-5">Technologies Utilized: HTML, CSS w/ Bootstrap, JavaScript w/ jQuery, Node.js, Express.js
+              and MySQL w/ Sequelize</p>
             <a class="btn btn-primary btn-lg rounded-pill" href="https://eat-muh-burger.herokuapp.com/" target="_blank">Open
               Project</a>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
               Close Project</a>
+            <br>
+            <a href="https://github.com/corey-mitchell/burger" target="_blank">Github Repo</a>
           </div>
         </div>
       </div>
@@ -464,11 +495,14 @@
             <img class="img-fluid mb-5" src="img/portfolio/crystals.gif" alt="Crystal Floating in Hands GIF">
             <p class="mb-5">Click on the crystals and try to add their values together to match the randomly generated
               number. Good Luck!</p>
+            <p class="mb-5">Technologies Utilized: HTML, CSS w/ Bootstrap and JavaScript w/ jQuery</p>
             <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/unit-4-game/" target="_blank">Open
               Project</a>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
               Close Project</a>
+            <br>
+            <a href="https://github.com/corey-mitchell/unit-4-game" target="_blank">Github Repo</a>
           </div>
         </div>
       </div>
@@ -487,12 +521,16 @@
             <p class="mb-5">A simple application for scheduling train arrivals. Built to learn Firebase and Moment.js,
               this application allows the user to input a train name, departure of the first train (in military time)
               and the frequency of trains in order to calculate the arrival time of the next train in minutes.</p>
+            <p class="mb-5">Technologies Utilized: HTML, CSS w/ Bootstrap, JavaScript w/ jQuery, Moment.JS and Firebase
+              DB</p>
             <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/Firebase-Assignment/"
               target="_blank">Open
               Project</a>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
               Close Project</a>
+            <br>
+            <a href="https://github.com/corey-mitchell/Firebase-Assignment" target="_blank">Github Repo</a>
           </div>
         </div>
       </div>
